# ssh-proxy

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  NOTICE.md  README.md  TODO.md  compile_commands.json  ssh-proxy.sh  vcpkg.json
cmake/: generate_man.cmake
ssh-proxy/: default.toml  man.8.in  sample.toml
ssh-proxy/include/: arguments.hpp  asyncStream.hpp  config.hpp.in  loggerMacro.hpp  ssh-proxy.hpp  tcpSocket.hpp
ssh-proxy/include/socks5Values/: address.hpp  clientConnect.hpp  connectResponce.hpp  greeting.hpp  port.hpp
ssh-proxy/include/sshProxy/: configFile.hpp  createSession.hpp  loggerLayout.hpp  socks5Server.hpp  socks5Session.hpp  sshSocket.hpp
ssh-proxy/src/: argProcesser.cpp  createSession.cpp  main.cpp  tryConnect.cpp
ssh-proxy/src/configFile/: configFile.cpp
ssh-proxy/src/loggerLayout/: format.cpp
ssh-proxy/src/socks5Server/: acceptConnection.cpp  socks5Server.cpp
ssh-proxy/src/socks5Session/: closeBoth.cpp  connectLocal.cpp  connectSsh.cpp  connection.cpp  doHandShake.cpp  doRequest.cpp  errorhander.cpp  isBlocked.cpp  openSshTunnel.cpp  processGreet.cpp  selectAuthMethod.cpp  socks5Session.cpp  startClientToRemoteRelay.cpp  startDataForwarding.cpp  startRemoteToClientRelay.cpp
ssh-proxy/src/socks5Values/address/: address.cpp  data.cpp  string.cpp  validate.cpp
ssh-proxy/src/socks5Values/clientConnect/: clientConnect.cpp  data.cpp  parseAddress.cpp
ssh-proxy/src/socks5Values/connectResponce/: connectResponce.cpp  data.cpp
ssh-proxy/src/socks5Values/greeting/greeting/: greeting.cpp  process.cpp
ssh-proxy/src/socks5Values/greeting/responce/: data.cpp  responce.cpp
ssh-proxy/src/socks5Values/port/: data.cpp  port.cpp  string.cpp
ssh-proxy/src/socksProxy/: convertC.cpp  execute.cpp  generateCmd.cpp  serializeTOML.cpp
ssh-proxy/src/sshSocket/: async_connect.cpp  async_read_some.cpp  async_write_some.cpp  sshSocket.cpp
